--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,9 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+.DS_STORE
+
+# Games Backend
+Games/Network_Defender/ND_backend/
+
