--- a/Web-App/Web-Backend/package.json
+++ b/Web-App/Web-Backend/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1",
     "nodemon": "^3.1.9",
-    "pg": "^8.15.6"
+    "pg": "^8.15.6",
+    "sharp": "^0.34.1"
   }
 }
